# computer_vision

./: pyproject.toml
src/kgy/: vision.py
tests/: test_vision.py
